# esp32c6study

./: .clang-format  .gitignore  CMakeLists.txt  README.md  WIFI_PROVISIONING.md  partitions.csv  provision_wifi.sh  sdkconfig.defaults  wifi_config.txt.example
main/: CMakeLists.txt  ble_gatt_server.c  ble_gatt_server.h  ble_server.c  ble_server.h  buzzer.c  buzzer.h  config.c  config.h  dht11.c  dht11.h  gpio_control.c  gpio_control.h  gpio_led.c  gpio_led.h  gpio_rgb.c  gpio_rgb.h  http_server.c  http_server.h  jsonrpc.c  jsonrpc.h  jsonrpc_methods.c  jsonrpc_methods.h  main.c  max7219.c  max7219.h  mqtt_manager.c  mqtt_manager.h  ota_manager.c  ota_manager.h  rpc_json.c  rpc_json.h  rpc_m.c  rpc_m.h  rpc_m_ble.c  rpc_m_ble.h  rpc_m_config.c  rpc_m_config.h  rpc_m_ht.c  rpc_m_ht.h  (+17 more)
